added animations to the pagingController, added a scheduling handler to the backend, made the pagingZoneListbox add the items correctly

--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -270,6 +270,16 @@
       debounce-duration="300">
     </iron-ajax>
 
+    <iron-ajax
+      id="createPagingZoneAjax"
+      url="/system/createPagingZone/"
+      method="PUT"
+      content-type="application/json"
+      handle-as="json"
+      on-response="_logResponse"
+      debounce-duration="300">
+    </iron-ajax>
+
   </template>
   <script>
 
