--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -19,6 +19,7 @@
 <link rel="import" href="/components/zone-creation-form.html">
 <link rel="import" href="/components/simple-fit.html">
 <link rel="import" href="/components/omaha-drawer.html">
+<!-- <link rel="import" href="/components/paging-controller-navbar.html"> -->
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/ >
 
@@ -305,6 +306,9 @@
 
         // add zone ID to each speaker
 
+        var callingInnerHTMLString = "";
+        var innerHTMLSpeakersString = "";
+
         var innerHTMLString = "";
         var zones = data.response.zones;
         var zoneListbox = document.querySelector("#zoneListbox");
@@ -322,9 +326,12 @@
         */
         //console.log(zones);
 
+        callingInnerHTMLString += "<paper-item center-justified flex class=\"pagingZoneStyle\"><font style=\"text-align: center; width: 100%; font-weight: bold;\">Masking Zones:</font></paper-item>";
+
         for(var i = 0; i < zones.length; i++) {
           console.log(zones);
           innerHTMLString += "<paper-item center-justified flex ><font style=\"width: 100%; text-align: center;\">" + zones[i].name + "</font></paper-item>";
+          callingInnerHTMLString += "<paper-item center-justified flex class=\"pagingZoneStyle\" onclick=\"thisClick()\"><font style=\"text-align: center; width: 100%;\">" + zones[i].name + "</font></paper-item>";
 
           for (var k = 0; k < zones[i].speakers.length; k++) {
             var isItInYetThatsWhatSheSaid = speakersJustID.indexOf(zones[i].speakers[k].id);
@@ -341,7 +348,7 @@
 
         innerHTMLString = "";
         var pagingZones = data.response.pagingZones;
-        var pagingZoneListbox = document.querySelector("#pagingZoneListbox");
+        //var pagingZoneListbox = document.querySelector("#pagingZoneListbox");
         pagingZoneListbox.innerHTML = "";
 
         pagingZones.forEach(function(pagingZone){
@@ -349,10 +356,15 @@
             speaker.pagingZone = pagingZone;
           });
         })
+
+        callingInnerHTMLString += "<paper-item center-justified flex><font style=\"text-align: center; width: 100%;\"></font></paper-item>";
+        callingInnerHTMLString += "<paper-item center-justified flex class=\"pagingZoneStyle\"><font style=\"text-align: center; width: 100%; font-weight: bold;\">Paging Zones:</font></paper-item>";
         
-        for(var i = 0; i < pagingZones.length; i++) {
+        /*for(var i = 0; i < pagingZones.length; i++) {
           console.log(pagingZones);
           innerHTMLString += "<paper-item id=\"" + pagingZones[i].name + "\" value=\"" + pagingZones[i].name + "\"center-justified flex ><font style=\"width: 100%; text-align: center;\">" + pagingZones[i].name + "</font></paper-item>";
+
+          callingInnerHTMLString += "<paper-item center-justified flex class=\"pagingZoneStyle\" onclick=\"thisClick()\"><font style=\"text-align: center; width: 100%;\">" + pagingZones[i].name + "</font></paper-item>";
 
           for (var k = 0; k < pagingZones[i].speakers.length; k++) {
             var isItInYetThatsWhatSheSaid = speakersJustID.indexOf(pagingZones[i].speakers[k].id);
@@ -363,8 +375,43 @@
               speakers[isItInYetThatsWhatSheSaid].pagingZone = pagingZones[i].speakers[k].pagingZone;
             }
           }
+        } */
+        //pagingZoneListbox.innerHTML = innerHTMLString;
+        
+          var targetListbox = document.getElementById("targetListbox");
+
+          for (i in pagingZones) {
+            console.log("pagingZones", pagingZones);
+            temp = document.createElement("paper-item");
+            temp.setAttribute("value", pagingZones[i].name);
+            temp.setAttribute("id", pagingZones[i].name);
+            // temp.setAttribute("speakerId", controller.speaker.speakerId); try doing some optimization stuff with the speakerId
+            temp.innerHTML = pagingZones[i].name;
+            Polymer.dom(pagingZoneListbox).appendChild(temp);
+          }
+
+
+        callingInnerHTMLString += "<paper-item center-justified flex><font style=\"text-align: center; width: 100%;\"></font></paper-item>";
+        callingInnerHTMLString += "<paper-item center-justified flex class=\"pagingZoneStyle\"><font style=\"text-align: center; width: 100%; font-weight: bold;\">Named Speakers:</font></paper-item>";
+        callingInnerHTMLString += "<paper-item center-justified flex class=\"pagingZoneStyle\" onclick=\"thisClick()\"><font style=\"text-align: center; width: 100%;\">Dummy name</font></paper-item>";
+
+
+
+        callingInnerHTMLString += "<paper-item center-justified flex><font style=\"text-align: center; width: 100%;\"></font></paper-item>";
+        callingInnerHTMLString += "<paper-item center-justified flex class=\"pagingZoneStyle\"><font style=\"text-align: center; width: 100%; font-weight: bold;\">Speakers:</font></paper-item>";
+
+        console.log(zones[0].speakers[0]);
+
+        for(var k = 0; k < zones[0].speakers.length; k++) {
+          callingInnerHTMLString += "<paper-item center-justified flex class=\"pagingZoneStyle\" onclick=\"thisClick()\"><font style=\"text-align: center; width: 100%;\">Speaker " + zones[0].speakers[k].id + "</font></paper-item>";
         }
-        pagingZoneListbox.innerHTML = innerHTMLString;
+
+
+        var callingListbox = document.querySelector("#callingListbox");
+        //callingListbox.innerHTML = callingInnerHTMLString;
+
+        var pagingSpeakerHolder = document.querySelector("#pagingSpeakerHolder");    
+        pagingSpeakerHolder.innerHTML = callingInnerHTMLString;
 
 
         //})
