--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -804,7 +804,7 @@
     // make the equalizer get the constants out to the database here
 
 $(function() {
-    $(document.getElementsByClassName("custom_slider")).each(function(i) {
+    $(".custom_slider").each(function(i) {    // change this back if it messes up
 
       //console.log(this);
 
