added a scheduling controller into speaker controller, changed the paging controller and added some other things

--- a/software/src/omaha/templates/components/login-form.html
+++ b/software/src/omaha/templates/components/login-form.html
@@ -70,7 +70,7 @@
       is: 'login-form',
 
       _submit: function() {
-        var loginInfo = {
+        var loginInfo = {     // dont think this needs to be here
 
         }
         this.$.loginAjax.body = {
