--- a/software/src/omaha/templates/components/open-map-controller.html
+++ b/software/src/omaha/templates/components/open-map-controller.html
@@ -14,6 +14,7 @@
 <link rel="import" href="/components/help-panel.html">
 <link rel="import" href="/components/speaker-tooltip.html">
 <link rel="import" href="/components/target-selector.html">
+<link rel="import" href="/components/scheduling-controller.html">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/ >
 
 <dom-module id="open-map-controller">
