--- a/software/src/omaha/templates/components/target-selector.html
+++ b/software/src/omaha/templates/components/target-selector.html
@@ -115,19 +115,19 @@
 
   </template>
   <script>
-  window.addEventListener('WebComponentsReady', function(e) {
-    console.log("WebComponentsReady");
-    console.log();
-  });
+    window.addEventListener('WebComponentsReady', function(e) {
+      console.log("WebComponentsReady");
+      console.log();
+    });
 
-  var dataArray = [];
-  console.log(dataArray);
+    var dataArray = [];
+    console.log(dataArray);
 
     var labels = ["80", "100", "125", "160", "200", "250", "315", "400", "500", "630", "800", "1k", "1.25k", "1.6k", "2k", "2.5k", "3.15k", "4k", "5k", "6.3k", "8k"];
 
 
-    data = {
-      labels,
+    var data = {
+      labels: labels,
       datasets: [{
         fillColor: "rgba(63, 81, 181, 0.25)",
         strokeColor: "#3f51b5",
@@ -135,7 +135,7 @@
         pointStrokeColor: "#3f51b5",  
         data: dataArray,
       }]
-    }
+    };
 
     var lineAttributes = {
       scaleOverride: true,
@@ -451,6 +451,9 @@
       this.value = dataArray[i];
     });
 
+    console.log("dater");
+    console.log(data, lineAttributes);
+
     myChart = new Chart(canvas.getContext("2d")).Line(data, lineAttributes);
   });
 
@@ -458,6 +461,8 @@
   $(window).resize(function() {
     $($(canvas).parent()).prepend("<canvas id=\"targetChart\" style=\"margin-left: calc(.02 * 100vh); margin-right: calc(.02 * 100vh); margin-top: calc(.02 * 100vh);\" class=\"chartClass\"></canvas>");
     canvas.remove();
+
+    console.log(canvas);
 
     canvas = document.getElementById("targetChart");
     canvas.width = $(window).width() * chart_width_scalar;
@@ -518,14 +523,9 @@
         pointStrokeColor: pointStrokeColor,  
         data: dataArray,
         }]
-    }
+    };
 
     redraw(redrawData, redrawLineAttributes);
   }
-
-    function me() {
-        console.log("gi");
-
-      }
   </script>
 </dom-module>
