--- a/software/src/omaha/templates/components/omaha-app.html
+++ b/software/src/omaha/templates/components/omaha-app.html
@@ -13,6 +13,8 @@
 <link rel="import" href="/components/open-map-controller.html">
 <link rel="import" href="/components/information-viewer.html">
 <link rel="import" href="/components/paging-controller-navbar.html">
+<link rel="import" href="/components/scheduling-controller.html">
+
 <link rel="import" href="/components/zones/zone-map-controller.html">
 <link rel="import" href="/components/zones/zone-controller.html">
 <link rel="import" href="/components/account-creation-form.html">
@@ -50,7 +52,7 @@
     <paper-drawer-panel id="panel">
       <omaha-drawer id="drawer" drawer selected="{{selected}}"></omaha-drawer>
       <paper-header-panel class="flex" mode="seamed" main>
-      23  <omaha-navbar id="nav" selected="{{selected}}" class="paper-header"></omaha-navbar>
+        <omaha-navbar id="nav" selected="{{selected}}" class="paper-header"></omaha-navbar>
         <neon-animated-pages on-iron-select="refreshMap" id="pages" attr-for-selected="page" class="fit" id="app-pages" selected="{{selected}}">
 
           <!-- <information-viewer page="information" id="information" zones="{{zones}}" controllers="[[controllers]]" class="fit"></information-viewer> -->
@@ -76,7 +78,6 @@
 
           <paging-controller-navbar page="pagingMap" id="pagingMap" zones="{{zones}}" controllers="[[controllers]]" class="fit">
           </paging-controller-navbar>
-
 
           <speaker-controller class="controller" page="speakerController" id="controller" class="fit"></speaker-controller>
           <zone-controller class="controller" page="zoneController" id="zoneController" class="fit"></zone-controller>
@@ -119,6 +120,7 @@
     var lastSelected = 0;
     var zones;
     var pagingZones;
+    //var all
     var displayedZones = {};
 
     Polymer({
@@ -411,8 +413,8 @@
         console.log(zones[0].speakers[0]);
 
         for(var k = 0; k < zones[0].speakers.length; k++) {
-          displayedZones[zones[0].speakers[k].name] = undefined;
-          callingInnerHTMLString += "<paper-item center-justified flex class=\"pagingZoneStyle\" onclick=\"updateViewForSelectedSpeakers()\"><font style=\"text-align: center; width: 100%;\">Speaker " + zones[0].speakers[k].id + "</font></paper-item>";
+          displayedZones[zones[0].speakers[k].id] = undefined;
+          callingInnerHTMLString += "<paper-item id=\"" + zones[0].speakers[k].id + "\" value=\"" + zones[0].speakers[k].id + "\"  center-justified flex class=\"pagingZoneStyle\" onclick=\"updateViewForSelectedSpeakers(this)\"><font style=\"text-align: center; width: 100%;\">Speaker " + zones[0].speakers[k].id + "</font></paper-item>";
         }
 
 
