--- a/software/src/omaha/templates/components/speaker-controller.html
+++ b/software/src/omaha/templates/components/speaker-controller.html
@@ -11,6 +11,7 @@
 <link rel="import" href="/components/averaging-controller.html">
 <link rel="import" href="/components/equalizer-controller.html">
 <link rel="import" href="/components/paging-controller.html">
+<link rel="import" href="/components/scheduling-controller.html">
 
 <!--<link rel="import" href="/components/map-controller.html">-->
 <dom-module id="speaker-controller">
@@ -92,6 +93,7 @@
         <paper-radio-button id="targetButton"     name="target"     class="flex">Target</paper-radio-button>
         <paper-radio-button id="equalizerButton"  name="equalizer"  class="flex">Equalizers</paper-radio-button>
         <paper-radio-button id="pagingButton"     name="paging"     class="flex">Paging</paper-radio-button>
+        <paper-radio-button id="schedulingButton" name="scheduling" class="flex">Scheduling</paper-radio-button>
       </paper-radio-group>
     </div>
     <neon-animated-pages attr-for-selected="page" selected="[[mode]]" class="flex">
@@ -125,6 +127,12 @@
           <paging-controller id="paging" speaker-id="[[speakerId]]" paging="{{pagingLevel}}"></paging-controller>
         </simple-fit>
       </neon-animatable>
+
+      <neon-animatable page="scheduling" class="layout horizontal" entry-animation="slide-from-right-animation" exit-animation="slide-left-animation">
+        <simple-fit class="container">
+           <scheduling-controller center-center page="scheduling" id="scheduling"></scheduling-controller>
+        </simple-fit>
+      </neon-animatable> 
 
     </neon-animated-pages>
 
